--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,12 +9,16 @@
     width: 100%;
     z-index: 10;
     .logo-area {
-        width: 55px;
+        width: 40px;
         height: 45px;
         background: #eff0f2;
         display: flex;
         align-items: center;
         justify-content: center;
+        border-bottom: 1px solid #0b1741;
+        img {
+            width: 40px;
+        }
     }
     .right-header {
         flex: 1;
@@ -54,4 +58,16 @@
             }
         }
     }
+    .user-panel {
+        padding-right: 10px;
+    }
+    .user-name-title {
+        color: #74797e;
+    }
+    .user-name {
+        font-weight: 600;
+    }
+}
+.mat-icon {
+    vertical-align: middle;
 }
