--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,20 @@
-<mat-card>
-    <mat-card-title>Login</mat-card-title>
-    <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit()">
-            <p>
+<div class="login-form">
+    <mat-card>
+        <mat-card-title>Login</mat-card-title>
+        <mat-card-content>
+            <form [formGroup]="form" (ngSubmit)="submit()">
                 <mat-form-field>
-                    <input type="text" matInput placeholder="Username" formControlName="username">
+                    <input autocomplete="false" type="text" matInput placeholder="Username" formControlName="userName">
                 </mat-form-field>
-            </p>
-
-            <p>
                 <mat-form-field>
-                    <input type="password" matInput placeholder="Password" formControlName="password">
+                    <input autocomplete="false" type="password" matInput placeholder="Password"
+                        formControlName="password">
                 </mat-form-field>
-            </p>
-
-            <p *ngIf="error" class="error">
-                {{ error }}
-            </p>
-
-            <div class="button">
-                <button type="submit" mat-button>Login</button>
-            </div>
-
-        </form>
-    </mat-card-content>
-</mat-card>
+                <div class="button">
+                    <button mat-raised-button color="primary">Login</button>
+                    <button mat-raised-button>Register</button>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
