css fixes for left menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <app-header *ngIf='isLoggedIn$ | async'></app-header>
   <div class="main-body-wrapper">
-    <div class="left-menu" *ngIf='isLoggedIn$ | async'>
-      <app-left-menu></app-left-menu>
-    </div>
+
+    <app-left-menu *ngIf='isLoggedIn$ | async'></app-left-menu>
+
     <div class="work-space-wrapper">
       <router-outlet></router-outlet>
     </div>
