--- a/src/app/left-menu/left-menu.component.scss
+++ b/src/app/left-menu/left-menu.component.scss
@@ -1,3 +1,50 @@
+.left-menu {
+    position: fixed;
+    display: flex;
+    width: 55px;
+    transition: width 0.3s;
+    top: 45px;
+    background: #0b1741;
+    color: #fff;
+    height: calc(100vh - 45px);
+    padding: 0px 7px;
+    z-index: 10;
+    app-left-menu {
+        width: 100%;
+    }
+    ::ng-deep {
+        .mat-tree {
+            width: 100%;
+            .mat-tree-node,
+            .mat-nested-tree-node {
+                li {
+                    .menu-title {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+    &:hover {
+        width: 250px;
+        z-index: 10;
+        ::ng-deep {
+            .mat-tree {
+                .mat-tree-node,
+                .mat-nested-tree-node {
+                    li {
+                        .menu-title {
+                            display: block;
+                            font-size: 13px;
+                            flex: 1;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 ::ng-deep {
     .example-tree-invisible {
         display: none;
