--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,13 +9,13 @@
     width: 100%;
     z-index: 10;
     .logo-area {
-        width: 40px;
+        width: 55px;
         height: 45px;
         background: #eff0f2;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-bottom: 1px solid #0b1741;
+        border-bottom: 2px solid #2b4fe5;
         img {
             width: 40px;
         }
