--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -1,4 +1,5 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+<div class="left-menu">
+  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
     <!-- This is the tree node template for leaf nodes -->
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
       <li class="mat-tree-node">
@@ -6,7 +7,8 @@
         <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon>{{node.icon}}</mat-icon>
         </button>
-        {{node.name}}
+        <span class="menu-title">{{node.name}}</span>
+
       </li>
     </mat-tree-node>
     <!-- This is the tree node template for expandable nodes -->
@@ -16,7 +18,7 @@
           <button mat-icon-button [attr.aria-label]="'Toggle ' + node.name">
             <mat-icon>{{node.icon}}</mat-icon>
           </button>
-          {{node.name}}
+          <span class="menu-title">{{node.name}}</span>
           <button mat-icon-button [attr.aria-label]="'Toggle ' + node.name">
             <mat-icon>
               {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
@@ -29,3 +31,4 @@
       </li>
     </mat-nested-tree-node>
   </mat-tree>
+</div>
