--- a/src/app/indent-requests/indent-request-list.component.html
+++ b/src/app/indent-requests/indent-request-list.component.html
@@ -22,12 +22,12 @@
                 </div>
             </div>
             <div class="filter-form">
-                <div class="collapse-triger" (click)="iscollapsed = !iscollapsed">
+                <div class="collapse-triger" (click)="isCollapsed = !isCollapsed">
                     <p>Search Indent Request</p>
-                    <span class="toglge-icon icon-accordian-arrow" *ngIf="!iscollapsed"></span>
-                    <span class="toglge-icon icon-dropdown-arrow" *ngIf="iscollapsed"></span>
+                    <span class="toglge-icon icon-accordian-arrow" *ngIf="!isCollapsed"></span>
+                    <span class="toglge-icon icon-dropdown-arrow" *ngIf="isCollapsed"></span>
                 </div>
-                <div class="form mt-3" *ngIf="!iscollapsed">
+                <div class="form mt-3" *ngIf="!isCollapsed">
                     <div class="form-group">
                         <label class="form-label">Requested By</label>
                         <div class="custom-search">
@@ -52,9 +52,9 @@
                     </div>
                 </div>
             </div>
-            <div class="filter-list" [ngClass]="iscollapsed ? 'collapsed' : ''">
+            <div class="filter-list" [ngClass]="isCollapsed ? 'collapsed' : ''">
                 <div class="list">
-                    <div class="card-wrapper" (click)="selectreq(item)" [ngClass]="item.selected ? 'active' : ''"
+                    <div class="card-wrapper" (click)="selectReq(item)" [ngClass]="item.selected ? 'active' : ''"
                         *ngFor="let item of reqList">
                         <div class="flex justify-space-between mb-2">
                             <div class="bold">{{item.reqCode}}</div>
@@ -75,121 +75,7 @@
         </div>
     </div>
     <div class="work-area">
-        <div class="title">Request Details</div>
-        <div class="info-wrapper">
-            <div class="top flex">
-                <div>
-                    <div>
-                        <div class="form-label mb-2">Req. Code</div>
-                    </div>
-                    <div class="req-code">{{selectedRreq.reqCode}}</div>
-                </div>
-                <div>
-                    <div class="form-label mb-2">Name (Emp Code)</div>
-                    <div class="flex">
-                        <span class="avtar"></span>
-                        <span class="bold">{{selectedRreq.empName}} ({{selectedRreq.empCode}})</span>
-                    </div>
-                </div>
-                <div>
-                    <div class="flex justify-center">
-                        <span class="status mb-2"
-                            [ngClass]="{'pending': selectedRreq.status == 'pending', 'approved': selectedRreq.status == 'approved', 'rejected': selectedRreq.status == 'rejected'}">{{selectedRreq.status}}</span>
-                    </div>
-                    <span class="form-label">{{selectedRreq.createdDate}} {{selectedRreq.createdTime}}</span>
-                </div>
-            </div>
-            <div class="bottom flex">
-                <div>
-                    <div class="form-label mb-2">Reason of Req.</div>
-                    <div class="bold">{{selectedRreq.reasonOfReq}}</div>
-                </div>
-                <div>
-                    <div class="form-label mb-2">Department</div>
-                    <div class="bold">{{selectedRreq.department}}</div>
-                </div>
-                <div>
-                    <div class="form-label mb-2">Nature of Request</div>
-                    <div class="bold">{{selectedRreq.natureOfReq}}</div>
-                </div>
-                <div>
-                    <div class="form-label mb-2">TAT</div>
-                    <div class="bold">{{selectedRreq.natureOfReq}}</div>
-                </div>
-            </div>
-        </div>
-        <div class="main-page">
-            <p class="title">Product Ordered List({{selectedRreq.productList.length}})</p>
-            <div class="mb-5">
-                <table class="table custom-table product-table">
-                    <thead>
-                        <tr>
-                            <th>Product Name</th>
-                            <th>UOM</th>
-                            <th>Indent Qty.</th>
-                            <th>Approved Qty.</th>
-                            <th>Doc</th>
-                            <th>Estimate Rate</th>
-                            <th>Estimate Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let item of selectedRreq.productList">
-                            <td class="bold">{{item.productName}}<i class="icon-more-info ml-2"
-                                    (click)="showInfo($event)"></i></td>
-                            <td>{{item.uom}}</td>
-                            <td>{{item.indentQty}}</td>
-                            <td><input type="text"></td>
-                            <td><i class="icon-doc"></i></td>
-                            <td class="bold">{{item.estimateRate}}</td>
-                            <td class="bold">{{item.estimatePrice}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="desc-tooltip arrow_box" id="desc-tooltip1" [ngClass]="isInfo ? 'show' : ''">
-                    <div class="p-3">
-                        <div class="flex">
-                            <p class="flex1 bold">Product Description</p>
-                            <div>
-                                <i class="icon-close cursor" (click)="isInfo = false"></i>
-                            </div>
-                        </div>
-                        <div class="body-text">
-                            - Core i7 <br>
-                            - 1TB Hard-disk <br>
-                            - 8BG RAM
-                        </div>
-                    </div>
-                    <hr class="m-0">
-                    <div class="p-3">
-                        Balance Qty. in inventory <span class="text-blue">2</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="comment-form flex">
-                <div class="flex1 mr-4">
-                    <div class="flex mb-3">
-                        <div class="status-block approve mr-3 " [ngClass]="reqStatus == 'approve' ? 'active' : ''"
-                            (click)="reqStatus = 'approve'">
-                            <i class="icon-approve-tick mr-3"></i>
-                            <span class="blank-circle mr-3"></span>
-                            <div>Approve</div>
-                        </div>
-                        <div class="status-block reject ml-3" [ngClass]="reqStatus == 'reject' ? 'active' : ''"
-                            (click)="reqStatus = 'reject'">
-                            <i class="icon-close mr-3"></i>
-                            <span class="blank-circle mr-3"></span>
-                            <div>Reject</div>
-                        </div>
-                    </div>
-                    <textarea class="form-control" placeholder="Add Your Comment" rows="3"></textarea>
-                </div>
-                <div class="submit-area">
-                    <button type="button" class="btn btn-primary">Submit</button>
-                </div>
-            </div>
-        </div>
+        <router-outlet></router-outlet>
     </div>
     <div class="widget-area">
         <div class="widget-wrapper stat-widget">
