fix(routes): Fix routing for indent requests

--- a/src/app/indent-requests/indent-request-list.component.html
+++ b/src/app/indent-requests/indent-request-list.component.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="work-area">
-        <router-outlet></router-outlet>
+        <request-details [selectedIndentRequest]='selectedReq'></request-details>
     </div>
     <div class="widget-area">
         <div class="widget-wrapper stat-widget">
