--- a/src/app/indent-requests/request-details/request-details.component.html
+++ b/src/app/indent-requests/request-details/request-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading;else loader;" class="request-details-container">
+<div *ngIf="selectedIndentRequest;else loader;" class="request-details-container">
     <div class="title">Request Details</div>
     <div class="info-wrapper">
         <div class="top flex">
