--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -4,7 +4,8 @@
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
       <li class="mat-tree-node" [routerLink]="node.path" [queryParams]="node.queryParams">
         <!-- use a disabled button to provide padding for tree leaf -->
-        <button [routerLink]="node.path" [queryParams]="node.queryParams" mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
+        <button [routerLink]="node.path" [queryParams]="node.queryParams" mat-icon-button matTreeNodeToggle
+          [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon>{{node.icon}}</mat-icon>
         </button>
         <span class="menu-title">{{node.name}}</span>
@@ -19,7 +20,7 @@
             <mat-icon>{{node.icon}}</mat-icon>
           </button>
           <span class="menu-title">{{node.name}}</span>
-          <button mat-icon-button [attr.aria-label]="'Toggle ' + node.name">
+          <button class="expand-icon" mat-icon-button [attr.aria-label]="'Toggle ' + node.name">
             <mat-icon>
               {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
             </mat-icon>
